logs/pyhardware.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/curve'...
Compiling './lib/python3.5/site-packages/curve/fitting.py'...
***   File "./lib/python3.5/site-packages/curve/fitting.py", line 134
    print string
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyhardware'...
Listing './lib/python3.5/site-packages/pyhardware/config'...
Compiling './lib/python3.5/site-packages/pyhardware/config/connected_instruments.py'...
***   File "./lib/python3.5/site-packages/pyhardware/config/connected_instruments.py", line 16
    print "instrument at address " + str(address) + " didn't reply in time..."
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyhardware/config/gui'...
Compiling './lib/python3.5/site-packages/pyhardware/config/gui/pyinstruments_config_gui.py'...
***   File "./lib/python3.5/site-packages/pyhardware/config/gui/pyinstruments_config_gui.py", line 239
    print "error"
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyhardware/drivers'...
Listing './lib/python3.5/site-packages/pyhardware/drivers/ivi'...
Listing './lib/python3.5/site-packages/pyhardware/drivers/serial'...
Compiling './lib/python3.5/site-packages/pyhardware/drivers/serial/agilent34401a.py'...
***   File "./lib/python3.5/site-packages/pyhardware/drivers/serial/agilent34401a.py", line 21
    print "DEVICE: " + self.ser.readline()
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhardware/drivers/serial/keithley2000.py'...
***   File "./lib/python3.5/site-packages/pyhardware/drivers/serial/keithley2000.py", line 24
    print "DEVICE: " + self.readline()
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyhardware/drivers/visa'...
Compiling './lib/python3.5/site-packages/pyhardware/drivers/visa/tds2024b.py'...
***   File "./lib/python3.5/site-packages/pyhardware/drivers/visa/tds2024b.py", line 39
    print preamble
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyhardware/utils'...
Listing './lib/python3.5/site-packages/pyhardware/utils/conf_xml'...
Compiling './lib/python3.5/site-packages/pyhardware/utils/conf_xml/conf.py'...
***   File "./lib/python3.5/site-packages/pyhardware/utils/conf_xml/conf.py", line 110
    print "could not parse the conf.xml file, probably because the file was closed prematurely"
                                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyhardware/utils/guiwrappersutils'...
Compiling './lib/python3.5/site-packages/pyhardware/utils/guiwrappersutils/guiwrapper.py'...
***   File "./lib/python3.5/site-packages/pyhardware/utils/guiwrappersutils/guiwrapper.py", line 93
    print "Attribute " + property_name + " was not found in the driver. The corresponding element will be dropped from the GUI"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyhardware-0.0.12.egg-info'...
Listing './lib/python3.5/site-packages/pyivi'...
Listing './lib/python3.5/site-packages/pyivi/ivic'...
Compiling './lib/python3.5/site-packages/pyivi/ivic/definesivifgen.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivic/definesivifgen.py", line 34
    cls._new_attr('output_mode',                (IVI_CLASS_PUBLIC_ATTR_BASE + 1L)  ,'ViInt32',False,False,False)
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyivi/ivic/definesiviscope.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivic/definesiviscope.py", line 34
    cls._new_attr('vertical_range',            (IVI_CLASS_PUBLIC_ATTR_BASE  + 1L)  ,'ViReal64',True,False,False)
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyivi/ivic/definesivispecan.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivic/definesivispecan.py", line 35
    cls._new_attr('amplitude_units',                               (IVI_CLASS_PUBLIC_ATTR_BASE + 1L)   ,'ViInt32',False,False,False)
                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyivi/ivic/ivispecan.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivic/ivispecan.py", line 171
    IviCSpecAn._new_attr('trace_count', IVI_CLASS_PUBLIC_ATTR_BASE + 18L  ,'ViInt32',False,False,False)
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyivi/ivicom'...
Listing './lib/python3.5/site-packages/pyivi/ivifactory'...
Compiling './lib/python3.5/site-packages/pyivi/ivifactory/__init__.py'...
***   File "./lib/python3.5/site-packages/pyivi/ivifactory/__init__.py", line 228
    print "instrument at address " + str(address) + " didn't reply in time..."
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
